--- a/src/styles/layout/_sidebar.scss
+++ b/src/styles/layout/_sidebar.scss
@@ -1,9 +1,9 @@
-$sidebar-background: #2b4d86;
-$sidebar-text-color: rgba(255, 255, 255, 0.6);
+$sidebar-background: #227B3E;
+$sidebar-text-color: rgba(255, 255, 255, 1);
 $sidebar-brand-height: 4rem;
-$sidebar-brand-background: rgb(204, 224, 238);
+$sidebar-brand-background: rgb(97, 128, 84);
 $sidebar-nav-group-background: rgba(0, 0, 0, 0.2);
-$sidebar-link-color: rgba(255, 255, 255, 0.6);
+$sidebar-link-color: rgba(255, 255, 255, 1);
 $sidebar-link-color-hover: rgba(255, 255, 255, 0.87);
 $sidebar-link-background-hover: rgba(255, 255, 255, 0.05);
 $sidebar-toggler-height: 3rem;
