Changed footer color to white

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -13,3 +13,7 @@ $enable-negative-margins: true;
 .wrapper {
     background-color: $main-background !important;
 }
+
+.footer {
+    background-color: #fff !important;
+}
