--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -1,8 +1,8 @@
-$header-background: #227B3E;
-$header-text-color: rgba(255, 255, 255, 1);
-$header-link-color: rgba(179, 223, 235, 0.681);
-$header-link-color-hover: rgba(37, 112, 140, 0.95);
-$header-brand-color: #618054;
+$header-background: #1E4D40;
+$header-text-color: rgba(255, 255, 255, 0.95);
+$header-link-color: rgba(255, 255, 255, 0.75);
+$header-link-color-hover: #ffffff;
+$header-brand-color: #D9A77E;
 
 .header {
   background: $header-background;
