--- a/src/styles/layout/_sidebar.scss
+++ b/src/styles/layout/_sidebar.scss
@@ -1,17 +1,17 @@
-$sidebar-background: #227B3E;
-$sidebar-text-color: rgba(255, 255, 255, 1);
+$sidebar-background: #1E4D40;
+$sidebar-text-color: rgba(255, 255, 255, 0.95);
 $sidebar-brand-height: 4rem;
-$sidebar-brand-background: rgb(97, 128, 84);
-$sidebar-nav-group-background: rgba(0, 0, 0, 0.2);
-$sidebar-link-color: rgba(255, 255, 255, 1);
-$sidebar-link-color-hover: rgba(255, 255, 255, 0.87);
-$sidebar-link-background-hover: rgba(255, 255, 255, 0.05);
+$sidebar-brand-background: rgb(217, 167, 126);
+$sidebar-nav-group-background: rgba(0, 0, 0, 0.12);
+$sidebar-link-color: rgba(255, 255, 255, 0.85);
+$sidebar-link-color-hover: #ffffff;
+$sidebar-link-background-hover: rgba(255, 255, 255, 0.08);
 $sidebar-toggler-height: 3rem;
-$sidebar-toggler-background: rgba(0, 0, 21, 0.2);
-$sidebar-toggler-background-hover: rgba(0, 0, 0, 0.3);
-$sidebar-toggler-color: rgba(255, 255, 255, 0.6);
+$sidebar-toggler-background: rgba(0, 0, 0, 0.15);
+$sidebar-toggler-background-hover: rgba(0, 0, 0, 0.25);
+$sidebar-toggler-color: rgba(255, 255, 255, 0.7);
 $sidebar-toggler-color-hover: #ffffff;
-$sidebar-z-index: $zindex-fixed; // Default 1030
+$sidebar-z-index: $zindex-fixed;
 $sidebar-overlay-z-index: 1025;
 
 :root {
